# PCDIO

./: CMakeLists.txt  README.md
include/pcdio/: pcdio.h
pybind/: pypcdio.cpp
python/: pcdio_test.py
source/: readply.cpp  readstl.cpp  readxxx.cpp  readxyzm.cpp
